# pyDARNio

./: .gitignore  .zenodo.json  README.md  mkdocs.yml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_template.md  deprecation_template.md  discussion_template.md  documentation_template.md  feature_template.md  question_template.md
docs/: about.md  index.md
docs/examples/: borealis_examples.py
docs/user/: Borealis2SuperDARN.md  BorealisIO.md  SDarn.md  SDarnRead.md  citing.md  install.md  superdarn_data.md
pyDARNio/: __init__.py
pyDARNio/borealis/: borealis_array.py  borealis_site.py  borealis_utilities.py
pyDARNio/dmap/: datastructures.py
pyDARNio/exceptions/: dmap_exceptions.py
pyDARNio/tests/: __init__.py
pyDARNio/utils/: extractions.py
pydarnio/: __init__.py
pydarnio/borealis/: base_format.py  borealis.py  borealis_array.py  borealis_convert.py  borealis_formats.py  borealis_restructure.py  borealis_site.py  borealis_utilities.py
pydarnio/dmap/: dmap.py  superdarn.py  superdarn_formats.py
pydarnio/exceptions/: borealis_exceptions.py  dmap_exceptions.py  warning_formatting.py
pydarnio/utils/: conversions.py  extractions.py
src/pydarnio/: __init__.py
tests/integration/: rawacf_data_sets.py  test_borealis.py  test_borealis_restructure.py  test_dmap.py  test_superdarn.py
tests/unit/: borealis_antennas_iq_data_sets.py  borealis_utils.py  file_utils.py  grid_data_sets.py  iqdat_data_sets.py  map_data_sets.py  rawacf_data_sets.py  test_borealis.py  test_conversions.py  test_dmap.py  test_superdarn.py  tfile_utils.py
(+27 files in other folders)
