[metadata]
license_files = LICENSE
name = pydarnio
version = 1.2.1
author = SuperDARN
long_description = file: README.md
long_description_content_type = text/markdown
description = Python library for reading and writing SuperDARN data
url = https://pydarnio.readthedocs.io/en/latest/
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.6
include_package_data = True
install_requires =
    pyyaml
    numpy
    h5py>=3.3.0
    deepdish
    pathlib2

[options.packages.find]
exclude =
    test*
    test_files*
    docs*
    build*